objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Agent_Names__c</fullName>
        <description>What are the agent names for commission?</description>
        <inlineHelpText>What are the agent names for commission?</inlineHelpText>
        <label>Agent Name(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AnnualUsageinUOM__c</fullName>
        <description>Annual Usage in UOM (Unit of Measure)</description>
        <label>Annual Usage in UOM</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_LBs__c</fullName>
        <description>Annual pounds for the product.</description>
        <inlineHelpText>Enter the total amount of pounds for the product for the opportunity.  If the product is in 50 pound bags and the opportunity is for 100 bags per month, then the total annual pounds is 50 x 100 x 12 = 60000 pounds.</inlineHelpText>
        <label>Annual LBs</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_MT__c</fullName>
        <label>Annual MT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAS_Number__c</fullName>
        <description>Chemical Abstract Society Number.</description>
        <inlineHelpText>Chemical Abstract Society Number.</inlineHelpText>
        <label>CAS Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Competitor_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Competitor</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>Opportunities (CC Competitor)</relationshipLabel>
        <relationshipName>CC_Competitor_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Opportunity_Producer_Partner_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Univar Partner TSDF</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>Opportunities (CC Opportunity Producer Partner)</relationshipLabel>
        <relationshipName>CC_Producer_Partner_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship needed for Publisher Actions to work.</description>
        <label>CPP</label>
        <referenceTo>CPP__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <formula>Campaign.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompetitorName__c</fullName>
        <label>Competitor Name</label>
        <picklist>
            <picklistValues>
                <fullName>3M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A.G. Layne, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AB Colby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accurez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aceto Corp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acid Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACME Hardesty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acme Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACP Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Zoller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADM Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Polymer Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Fleming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Staley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afton Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airgas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Products &amp; Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akzo Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akzo Nobel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama Pigment Co</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albemarle Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberdingk-Boley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albright &amp; Wilson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcan Intl Network US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alchem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alchemy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alco Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alexander Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allchem Ind</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor_Price__c</fullName>
        <description>Price the competitor submitted if we did not win the Opportunity.</description>
        <label>Competitor Price</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_TSDF__c</fullName>
        <label>CC Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Brenntag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nexeo Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colonial Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dow Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawkins Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jones Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KA Steel Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVS Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A.G. Layne, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AB Colby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accurez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accuworx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aceto Corp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acid Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACME Hardesty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acme Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACP Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Zoller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADM Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Polymer Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Waste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Fleming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AES Environmental, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Staley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aevitas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afton Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGFA Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agmet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aimco Solrec</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <picklist>
            <controllingField>FalloutReason__c</controllingField>
            <picklistValues>
                <fullName>Axens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axiall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brenntag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matrix Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A (Developmental)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nexeo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Container_Type__c</fullName>
        <label>Container Type</label>
        <picklist>
            <picklistValues>
                <fullName>Burlap, Cloth, Paper, Plastic Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHEP Bin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cylinders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dump Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiberboard or Plastic Drums</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiber or Plastic Boxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow Bins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lab Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal Boxes, Cartons, Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal Drums, Barrels, Kegs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roll-off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tank, Bulk – above ground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tank, Bulk – underground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tanks Portable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tank Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacuum Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wooden Boxes, Cartons, Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wooden Drums, Barrels, Kegs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Exp_Date__c</fullName>
        <label>Contract Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conversion_Type__c</fullName>
        <label>Conversion Type</label>
        <picklist>
            <picklistValues>
                <fullName>Green Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-comp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CostTotalCommission__c</fullName>
        <formula>Quantity__c  *  Cost_Commission_per_UOM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Total Commission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Commission_per_UOM__c</fullName>
        <description>Cost per Unit of Measure for the Commission.</description>
        <inlineHelpText>Cost per Unit of Measure for the Commission.</inlineHelpText>
        <label>Cost Commission per UOM</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_INCO_Terms__c</fullName>
        <description>CFR (Cost and Freight)
CIF (Cost, Insurance and Freight)
CIP (Carriage and Insurance Paid To)
CPT (Carriage Paid To)
DAP (Delivered at Place)
DAT (Delivered at Terminal)
DDP (Delivered Duty Paid)
EXW (Ex Works)
FAS (Free Alongside Ship)
FCA (Free Carrier)
FOB (Free On Board)</description>
        <inlineHelpText>CFR-Cost &amp; Freight
CIF-Cost, Ins. &amp; Freight
CIP-Carriage &amp; Ins. Paid To
CPT-Carriage Paid To
DAP-Delivered at Place
DAT-Delivered at Terminal
DDP-Delivered Duty Paid
EXW-Ex Works
FAS-Free Alongside Ship
FCA-Free Carrier
FOB-Free On Board</inlineHelpText>
        <label>Cost INCO Terms</label>
        <picklist>
            <picklistValues>
                <fullName>CFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Per_UOM__c</fullName>
        <label>Cost $ Per UOM</label>
        <precision>11</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Subtotal_Amount__c</fullName>
        <formula>Quantity__c  *  Cost_Per_UOM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Subtotal Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Total_Amount__c</fullName>
        <formula>Cost_Subtotal_Amount__c  +  Cost_Total_Freight__c  +   Cost_Total_Tariff_Fees__c  + Cost_Total_Import_Fees__c +  CostTotalCommission__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Total_Freight__c</fullName>
        <description>Total extended cost of freight in specified currency.</description>
        <inlineHelpText>Total extended cost of freight in specified currency.</inlineHelpText>
        <label>Cost Total Freight</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Total_Import_Fees__c</fullName>
        <description>Total extended cost of Import fees in currency specified.</description>
        <inlineHelpText>Total extended cost of Import fees in currency specified.</inlineHelpText>
        <label>Cost Total Import Fees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Total_Tariff_Fees__c</fullName>
        <description>Total extended cost of tariff fees in currency specified.</description>
        <inlineHelpText>Total extended cost of tariff fees in currency specified.</inlineHelpText>
        <label>Cost Total Tariff Fees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_UOM__c</fullName>
        <label>Cost UOM</label>
        <picklist>
            <picklistValues>
                <fullName>DMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Currency codes.</description>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>AED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BWP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNY</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Service_Provider_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Service Provider</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>Opportunities (Current Service Provider)</relationshipLabel>
        <relationshipName>CC_Current_Service_Provider_Opps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Competitor A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;
&amp;IF( LEN( Specific_Use__c ) = 0, &quot;Application, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF( ISPICKVAL( PricingUOM__c, &quot;&quot; ), &quot;$UOM, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF( ISBLANK( PriceperUOM__c ), &quot;$ per UOM, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF( ISBLANK( AnnualUsageinUOM__c ), &quot;Annual Usage in UOM, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF( ISNULL( GSE_Producer_Name__c ), &quot;Producer Partner&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN( Specific_Use__c ) = 0, 0, 20 ) + 
IF( ISPICKVAL( PricingUOM__c, &quot;&quot; ), 0, 20 ) + 
IF( ISBLANK( PriceperUOM__c ), 0, 20 ) + 
IF( ISBLANK( AnnualUsageinUOM__c ), 0, 20 ) + 
IF( ISNULL( GSE_Producer_Name__c ), 0, 20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discharge_Port__c</fullName>
        <label>Discharge Port</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driver_Name__c</fullName>
        <description>Name of Driver who provided the information for the Opportunity.</description>
        <label>Driver Name</label>
        <picklist>
            <picklistValues>
                <fullName>Alan Stables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alfonso Agraz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alfonso Pena</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alfred Galan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrew Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andy Knight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antonio Ibarra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aurelio Vega</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ben Natividad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill Kervahn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bobby Knudtson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bob Kjellander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bob Reynolds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brian Belcourt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chris Stimson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clyde Humphreys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daniel Espinoza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daniel Swana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Darryl Joy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dave Gemmell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dave Wainwright</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Bailie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Stepp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Throop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diondre Fontes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Douglas Cromer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dwight Grissom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eddie Correa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eddie Ortiz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edmund Lovett</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Est_GMDollar__c</fullName>
        <label>Est. $GM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_GMPercent__c</fullName>
        <formula>Est_GMDollar__c  /  Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est. GM%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Estimated_Arrival__c</fullName>
        <label>Requested Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Departure_From__c</fullName>
        <label>Bulk Laycan Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Departure_To__c</fullName>
        <label>Bulk Laycan End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Ongoing_Business__c</fullName>
        <label>Event/Ongoing Business</label>
        <picklist>
            <picklistValues>
                <fullName>Event (one-time)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_GMDollar__c</fullName>
        <formula>Est_GMDollar__c  *  Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected $GM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Sales__c</fullName>
        <formula>Amount  *  Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCL_departure_date__c</fullName>
        <label>FCL Departure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FalloutReason__c</fullName>
        <description>The reason the opportunity was not won.</description>
        <label>Fallout Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Bid Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive offer not met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formulation Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Decision Maker Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Inventory Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Money/Budget for Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Producer Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Source Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Too High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation not secured</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Invoice_Number__c</fullName>
        <description>First Invoice Number received for &quot;Won&quot; Opportunity.</description>
        <label>First Invoice Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>